argocd/apps/atuin/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: atuin
  name: atuin
spec:
  ports:
    - name: "http"
      port: 8888
      targetPort: 8888
  selector:
    app: atuin
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
